<package>
  <name>bag_to_cam_pose_data</name>
  <version>0.0.1</version>
  <description>

     Extractor in order to gather cam and pose data from a bag file

  </description>
  <author>Christian Heiden</author>
   <maintainer email="cheiden@uos.de">Christian heiden</maintainer>
  <license>Beerware</license>
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
